--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,9 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+
 body {
 	font-size: 62.5%;
+	background-color: #263238;
 }
 
 .App {
 	width: 100%;
+	color: white;
+	font-family: "Open Sans";
+	font-weight: 400;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -17,19 +23,36 @@ body {
 /* Styles for the Nav component, which should be loaded at the top of every page */
 nav {
 	width: 100%;
+	background-color: #4f5b62;
+	color: white;
 	display: flex;
 	justify-content: center;
 }
 
 .nav-container {
 	width: 80%;
+	margin: 0.8rem 0;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
 
-nav a {
+.nav-app-title > a {
+	font-size: 1.2rem;
+	font-weight: 600;
 	color: inherit;
 	text-decoration: none;
+}
+
+.nav-links > a {
+	margin-left: 2rem;
+	font-size: 0.9rem;
+	color: inherit;
+	text-decoration: none;
+}
+
+.nav-container a:hover {
+	color: #4dd0e1;
 }
 
 /*	Styles for the Login component */
