--- a/src/modules/style.css
+++ b/src/modules/style.css
@@ -6,8 +6,8 @@
 	margin: 1rem;
 }
 
-.dashboard-form-button {
-	margin: 0.5rem 0;
+.dashboard-form-button-row {
+	margin: 2rem 0;
 }
 
 .dashboard-table-main-spinner {
